--- a/eicw/eicw-3-leg.html
+++ b/eicw/eicw-3-leg.html
@@ -46,6 +46,7 @@
     <div id="scroll-indicator"></div>
   </div>
 
+
   <header>
     <a href="../index.html"><img src="../img/core-img/logo.png" alt="logo" class="logo" /></a>
 
@@ -70,7 +71,7 @@
   </header>
 
   <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-img"
-    style="background-image: url(img/cover-eicw-4.png); height: 100vh;">
+    style="background-image: url(img/cover-3-light.png); height: 100vh;">
     <div class="wbnrfz_details_blog">
       <div class="container">
         <div class="portfolio-controls d-flex justify-content-between align-items-center">
@@ -103,19 +104,19 @@
         <div id="portfolioFilter" class="collapse">
           <div class="portfolio-filter mt-3">
             <a href="eicw.html">
-              <button class="btn">Design System Introduction</button>
+              <button class="btn">Improving Existing Wayfinding Designs.</button>
             </a>
             <a href="eicw-2.html">
-              <button class="btn">Proposed Wayfinding Changes - Trains</button>
+              <button class="btn">Enhancing Clarity & Fine-Tunes</button>
             </a>
-            <a href="eicw-3.html">
-              <button class="btn">Proposed Wayfinding Changes - Buses</button>
+            <a href="#">
+              <button class="btn">Showcasing My Own Ideas.</button>
             </a>
             <a href="eicw-4.html">
-              <button class="btn active">Proposed UI/UX Changes</button>
+              <button class="btn">CCL6 & The Way Forward.</button>
             </a>
             <a href="eicw-5.html">
-              <button class="btn">Rethinking CCL6 Signages</button>
+              <button class="btn">Redesigning The Buses' Side Of Things</button>
             </a>
           </div>
         </div>
@@ -123,7 +124,6 @@
     </div>
   </section>
 
-  <!-- Section Content -->
   <section class="about-me-summ clearfix">
     <div class="wbnrfz_details_body">
       <div class="container container-mobile">
@@ -134,28 +134,19 @@
               <!-- Preface -->
               <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
                 <div class="info justify-content-center">
-                  <h2 class="text-center" style="font-size: 30px; font-weight:bold; text-align: left;">Proposed UI/UX
-                    Changes</h2>
-                  <p style="text-align: left;">In aligning with the current Wayfinding System, I have incorporated the
-                    elements of simplicity, clarity, and consistency. The designs aim to ensure that users can easily
-                    navigate and understand the information presented, regardless of their familiarity with the system.
-                    These user interfaces are designed to be intuitive and visually appealing, enhancing the overall
-                    commuting experience.
-                  </p>
+                  <h2 class="text-center" style="font-size: 30px; font-weight:bold; text-align: left;">Showcasing
+                    my own ideas</h2>
+                  <p style="text-align: left;">This section is dedicated specially to display my ideas & concepts on how
+                    I envision the current Wayfinding systems can be applied. It's ok to be ambitious here. The sky is
+                    the limit! <i>More ideas will be uploaded as soon as it's ready! Stay tuned!</i></p>
                 </div>
               </div>
               <div class="portfolio-filter portfolio-filter-sub mt-3 wow fadeInUp" data-wow-delay="100ms">
-                <a href="#bat">
-                  <button class="btn">Bus Arrival Timings (LTA)</button>
+                <a href="#iu-img">
+                  <button class="btn">Customized Designs</button>
                 </a>
-                <a href="#tv">
-                  <button class="btn">TrainVision (TEL)</button>
-                </a>
-                <a href="#cckint">
-                  <button class="btn">CDD (STE)</button>
-                </a>
-                <a href="#br-diag">
-                  <button class="btn">STARiS 2.0 (SMRT)</button>
+                <a href="#postface">
+                  <button class="btn">Postface</button>
                 </a>
               </div>
             </div>
@@ -165,9 +156,8 @@
     </div>
   </section>
 
-  <!-- Section Header -->
-  <section class="breadcrumb-area-eicw-subs bg-img bg-overlay parallax" id="cd-img"
-    style="background-image: url(img/cdbus-light.png)">
+  <section class="breadcrumb-area-eicw-subs bg-img bg-overlay parallax" id="iu-img"
+    style="background-image: url(img/iu-light.png)">
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-12">
@@ -179,40 +169,55 @@
     </div>
   </section>
 
-  <!-- Section Content 1 -->
   <section class="about-me-summ section-padding-80-0 clearfix" style="padding-bottom: 10px;">
     <div class="wbnrfz_details_body_tchp">
       <div class="container container-mobile">
         <div class="row justify-content-center">
 
-          <!-- Bus Arrival Timings (LTA) -->
+          <!-- Bus Route Diagrams Signages -->
           <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
             <div class="info justify-content-center">
 
-              <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 2em;" id="bat">Bus Arrival
-                Timings (LTA)
-              </h2>
-              <p style="text-align: left;">Lorem Ipsum</p>
-
-              <div class="banner-eicw">
-                <a href="img/lcd-light.png" id="lcd1" class="portfolio-img">
-                  <img src="img/lcd-light.png" id="lcd1-img" class="img-fluid" alt="lcd1">
-                </a>
-              </div>
+              <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 2em;">Bus Route Diagrams
+                Signages for
+                key Bus Stops</h2>
+              <p style="text-align: left;">Introducing new Bus Route Diagrams Signages for key Bus Stops! (e.g. MRT
+                Stations, Hospitals etc). The route diagrams are here to help commuters visualize roughly the direction
+                of services.
+                <br> For full route
+                details, commuters can refer to the Bus Services Board which lists down the whole Bus Stops.
+              </p>
             </div>
+
+            <div class="banner-eicw">
+              <a href="img/cs-light.png" id="cs" class="portfolio-img">
+                <img src="img/cs-light.png" id="cs-img" class="img-fluid" alt="cs">
+              </a>
+            </div>
+            <hr>
           </div>
 
-          <hr>
-
-          <!-- TrainVision (TEL)) -->
+          <!-- User Interfaces - LCD Screens -->
           <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
             <div class="info justify-content-center">
 
-              <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 1em;" id="tv">TrainVision
-                (TEL)
+              <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 1.2em;">User Interfaces -
+                LCD Screens
               </h2>
-              <p style="text-align: center;"> For the LCD screens on the TEL trains, I have redesigneed it to look exactly
+              <p style="text-align: left;">In aligning with the current Wayfinding System, I have incorporated the
+                elements of simplicity, clarity, and consistency. The designs aim to ensure that users can easily
+                navigate and understand the information presented, regardless of their familiarity with the system.
+                These user interfaces are designed to be intuitive and visually appealing, enhancing the overall
+                commuting experience.</p>
+
+              <p style="text-align: left;">For the LCD screens on the TEL trains, I have redesigneed it to look exactly
                 like the other counterparts on the NSL, EWL, NEL and CCL.</p>
+            </div>
+
+            <div class="banner-eicw">
+              <a href="img/lcd-light.png" id="lcd1" class="portfolio-img">
+                <img src="img/lcd-light.png" id="lcd1-img" class="img-fluid" alt="lcd1">
+              </a>
 
               <div class="banner-eicw">
                 <a href="img/lcd2-light.png" id="lcd2" class="portfolio-img">
@@ -220,12 +225,90 @@
                 </a>
               </div>
             </div>
+            <hr>
           </div>
         </div>
       </div>
+    </div>
   </section>
 
+  <section class="about-me-summ section-padding-80-0 clearfix" style="padding-bottom: 10px;">
+    <div class="wbnrfz_details_body_tchp">
+      <div class="container container-mobile">
+        <div class="row justify-content-center">
 
+          <!-- Bus Route Diagrams Signages -->
+          <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+            <div class="info justify-content-center">
+
+              <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 0em;">Additional Wayfinding
+                Signages</h2>
+              <p style="text-align: left;">Apart from the usual Wayfinding Signages, additional signages can be added to
+                help commuters navigate around the area. The designs shown here are redesigns from paper signages.
+                <br> I have talked about the Paper signages issues previously. Do have a read <a
+                  href="https://nurafianzulkifli.com/blog/wayfind-2.html">here</a>.
+              </p>
+            </div>
+
+            <div class="banner-eicw">
+              <a href="img/wfs-light.png" id="wfs" class="portfolio-img">
+                <img src="img/wfs-dark.png" id="wfs-img" class="img-fluid" alt="wfs">
+              </a>
+
+              <a href="img/wfs2-light.png" id="wfs2" class="portfolio-img">
+                <img src="img/wfs2-dark.png" id="wfs2-img" class="img-fluid" alt="wfs2">
+              </a>
+            </div>
+            <hr>
+          </div>
+
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="about-me-summ section-padding-80-0 clearfix" style="padding-top: 10px;">
+    <div class="wbnrfz_details_body_tchp">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-12">
+            <div class="row justify-content-center">
+
+              <!-- Postface -->
+              <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms" id="postface">
+                <div class="info justify-content-center">
+                  <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold; text-align: left;">Postface
+                  </h2>
+                  <p style="text-align: left;">The different Brainstorming of Designs are a compilation of ideas from my
+                    Trains and Bus Rides over the years, ever since the
+                    new Wayfinding System was introduced. You may notice many of the designs are catered for the Train's
+                    side of
+                    things. This is because whatever that is suggested can be easily re-applied for the Buses side of
+                    things as well.
+                  </p>
+                  <blockquote cite="https://imgur.com/9EFau4B">
+                    "Achieving consistency and replacing all signage across the country overnight is very challenging.
+                    While we wish
+                    to do so, it requires time, manpower, and careful planning. Compared to metro systems overseas, some
+                    signages
+                    also differ slightly, such as those of Taipei Metro and MTR." <br>
+                    <cite> - <a href="https://imgur.com/9EFau4B">You Yuan - SMRT's Manager, Ops Support</a></cite>
+                  </blockquote>
+                  <p>Hence this microsite could be useful in diving in and exploring different ideas that can be used to
+                    make
+                    the wayfinding
+                    system better. Whether the ideas worked in real-life or not, is a different story. Well, if you have
+                    not tried, you will
+                    never know!</p>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
 
 
   <footer class="footer-area">
@@ -253,7 +336,7 @@
     data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
     </script>
 
-  <script src="js/eicw-4.js"></script>
+  <script src="js/eicw-3.js"></script>
 
   <script src="../js/jquery.min.js"></script>
 
@@ -264,6 +347,8 @@
   <script src="../js/pw.bundle.js"></script>
 
   <script src="../js/default-assets/active.js"></script>
+
+  <script src="../js/scroll.js"></script>
 
   <script src="../js/preloader.js"></script>
 
