--- a/eicw/eicw-4.html
+++ b/eicw/eicw-4.html
@@ -70,7 +70,7 @@
   </header>
 
   <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-img"
-    style="background-image: url(img/cover-eicw-4.png); height: 100vh;">
+    style="background-image: url(img/cover-eicw-4-light.png); height: 100vh;">
     <div class="wbnrfz_details_blog">
       <div class="container">
         <div class="portfolio-controls d-flex justify-content-between align-items-center">
@@ -151,10 +151,7 @@
                 <a href="#tv">
                   <button class="btn">TrainVision (TEL)</button>
                 </a>
-                <a href="#cckint">
-                  <button class="btn">CDD (STE)</button>
-                </a>
-                <a href="#br-diag">
+                <a href="#staris2">
                   <button class="btn">STARiS 2.0 (SMRT)</button>
                 </a>
               </div>
@@ -167,7 +164,7 @@
 
   <!-- Section Header -->
   <section class="breadcrumb-area-eicw-subs bg-img bg-overlay parallax" id="cd-img"
-    style="background-image: url(img/cdbus-light.png)">
+    style="background-image: url(img/cdui-light.png)">
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-12">
@@ -192,7 +189,9 @@
               <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 2em;" id="bat">Bus Arrival
                 Timings (LTA)
               </h2>
-              <p style="text-align: left;">Lorem Ipsum</p>
+              <p style="text-align: left;">The new panels are an improved version with vibrant graphics and bigger
+                fonts and provide information that allows commuters to better plan their journeys. I have redesigned it
+                to match the current design system standards.</p>
 
               <div class="banner-eicw">
                 <a href="img/lcd-light.png" id="lcd1" class="portfolio-img">
@@ -204,20 +203,73 @@
 
           <hr>
 
-          <!-- TrainVision (TEL)) -->
+          <!-- TrainVision (TEL) -->
           <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
             <div class="info justify-content-center">
 
               <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 1em;" id="tv">TrainVision
                 (TEL)
               </h2>
-              <p style="text-align: center;"> For the LCD screens on the TEL trains, I have redesigneed it to look exactly
+              <p style="text-align: center;"> For the LCD screens on the TEL trains, I have redesigned it to look
+                exactly
                 like the other counterparts on the NSL, EWL, NEL and CCL.</p>
 
               <div class="banner-eicw">
                 <a href="img/lcd2-light.png" id="lcd2" class="portfolio-img">
                   <img src="img/lcd2-light.png" id="lcd2-img" class="img-fluid" alt="lcd2">
                 </a>
+              </div>
+            </div>
+          </div>
+
+          <hr>
+
+          <!-- STARiS 2.0 (SMRT) -->
+          <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
+            <div class="info justify-content-center">
+
+              <h2 class="text-center" style="font-size: 30px; font-weight: bold; margin-top: 1em;" id="staris2">STARiS
+                2.0 (SMRT)
+              </h2>
+              <p style="text-align: left;"> For the LCD screens on the KSFB/C (C151B/C) trains, I have redesigned it to
+                look
+                exactly like the other counterparts on the NSL, EWL, NEL and CCL. The current UI is <i>waaay</i> too
+                dated.</p>
+
+              <div class="row">
+                <div class="column column-pic">
+                  <figcaption>
+                    <a href="img/staris2-C.png" id="staris2-c" class="portfolio-img ">
+                      <img src="img/staris2-C.png" id="staris2-c-img" class="img-fluid cp-img" alt="staris2-c">
+                    </a>
+                    <p style="text-align: center;">Current STARiS 2.0 UI, on the KSFC Trains. <b>Updated</b> Line
+                      Diagram Layout.
+                    </p>
+                  </figcaption>
+                </div>
+
+                <div class="column column-pic">
+                  <figcaption>
+                    <a href="img/staris2-B.png" id="staris2-b" class="portfolio-img ">
+                      <img src="img/staris2-B.png" id="staris2-b-img" class="img-fluid cp-img" alt="staris2-b">
+                    </a>
+                    <p style="text-align: center;">Current STARiS 2.0 UI, on the KSFC Trains. <b>Older</b> Line
+                      Diagram Layout.
+                    </p>
+                  </figcaption>
+                </div>
+
+                <div class="banner-eicw">
+                  <a href="img/lcd3-light.png" id="lcd3" class="portfolio-img">
+                    <img src="img/lcd3-light.png" id="lcd3-img" class="img-fluid" alt="lcd3">
+                  </a>
+                </div>
+
+                <video id="eicw-vid3" controls controlsList="nodownload" oncontextmenu="return false;" muted
+                  width="100%" class="column-vid">
+                  <source src="img/staris2-red.mp4" type="video/mp4">
+                  Your browser does not support the video tag.
+                </video>
               </div>
             </div>
           </div>
