--- a/eicw/eicw-5.html
+++ b/eicw/eicw-5.html
@@ -7,7 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <title>EICW | NRFZ</title>
+  <title>Rethinking CCL6 Signages | EICW</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
   <meta property="og:image" content="https://i.imgur.com/kMi3VsK.png" />
@@ -134,8 +134,7 @@
               <!-- CCL6 -->
               <div class="col-lg-12 wow fadeInUp" data-wow-delay="100ms">
                 <div class="info justify-content-center">
-                  <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold; text-align: left;">CCL6 & the
-                    way forward.</h2>
+                  <h2 class="mb-3 text-center" style="font-size: 30px; font-weight:bold; text-align: left;">Rethinking CCL6 Signages</h2>
                   <p style="text-align: left;">LTA recently held a Public Engagement on enhanced Circle Line Wayfinding
                     Designs. A few mockups were showcased and the public were allowed to choose options on their
                     preference in the upcoming CCL6's wayfinding design enhancements. </p>
