--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 
 
 
-    <section id="lrd" class="d-flex flex-column justify-content-center">
+    <section id="ls" class="d-flex flex-column justify-content-center">
         <div class="container h-100">
             <div class="row h-100 align-items-center">
                 <div class="col-12">
@@ -119,19 +119,146 @@
                 </div>
             </div>
 
+            <!-- EWL -->
+            <div class="col-xl-4 col-md-6 wow fadeInUp" data-wow-delay="300ms">
+                <div class="card card-ewl border-ewl h-100 py-2">
+                    <div class="card-body card-body-nsl">
+                        <div class="row no-gutters align-items-center">
+                            <div class="col mr-2">
+                                <div class="line text-xs font-weight-bold text-ewl text-uppercase mb-1">
+                                    <a href="mrt-lines/ewl.html">East-West Line</a>
+                                </div>
+                                <!-- Days -->
+                                <div class="h5 mb-0 font-weight-bold">Normal Service</div>
+                            </div>
+                            <div class="col-auto">
+                                <img src="img/caplets/EWLCap.png" alt="EWL" width="55px">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
+            <!-- NEL -->
+            <div class="col-xl-4 col-md-6 wow fadeInUp" data-wow-delay="300ms">
+                <div class="card card-nel border-nel h-100 py-2">
+                    <div class="card-body card-body-nel">
+                        <div class="row no-gutters align-items-center">
+                            <div class="col mr-2">
+                                <div class="line text-xs font-weight-bold text-nel text-uppercase mb-1">
+                                    <a href="mrt-lines/nel.html">North East Line</a>
+                                </div>
+                                <!-- Days -->
+                                <div class="h5 mb-0 font-weight-bold">Normal Service</div>
+                            </div>
+                            <div class="col-auto">
+                                <img src="img/caplets/NELCap.png" alt="NEL" width="55px">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-            
-        </div>
+            <!-- CCL -->
+            <div class="col-xl-4 col-md-6 wow fadeInUp" data-wow-delay="300ms">
+                <div class="card card-ccl border-nel h-100 py-2">
+                    <div class="card-body card-body-ccl">
+                        <div class="row no-gutters align-items-center">
+                            <div class="col mr-2">
+                                <div class="line text-xs font-weight-bold text-ccl text-uppercase mb-1">
+                                    <a href="mrt-lines/ccl.html">Circle Line</a>
+                                </div>
+                                <!-- Days -->
+                                <div class="h5 mb-0 font-weight-bold">Normal Service</div>
+                            </div>
+                            <div class="col-auto">
+                                <img src="img/caplets/CCLCap.png" alt="CCL" width="55px">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- DTL -->
+            <div class="col-xl-4 col-md-6 wow fadeInUp" data-wow-delay="300ms">
+                <div class="card card-dtl border-dtl h-100 py-2">
+                    <div class="card-body card-body-dtl">
+                        <div class="row no-gutters align-items-center">
+                            <div class="col mr-2">
+                                <div class="line text-xs font-weight-bold text-dtl text-uppercase mb-1">
+                                    <a href="mrt-lines/dtl.html">Downtown Line</a>
+                                </div>
+                                <!-- Days -->
+                                <div class="h5 mb-0 font-weight-bold">Normal Service</div>
+                            </div>
+                            <div class="col-auto">
+                                <img src="img/caplets/DTLCap.png" alt="DTL" width="55px">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- TEL -->
+            <div class="col-xl-4 col-md-6 wow fadeInUp" data-wow-delay="300ms">
+                <div class="card card-tel border-tel h-100 py-2">
+                    <div class="card-body card-body-tel">
+                        <div class="row no-gutters align-items-center">
+                            <div class="col mr-2">
+                                <div class="line text-xs font-weight-bold text-tel text-uppercase mb-1">
+                                    <a href="mrt-lines/tel.html">Thomson-East Coast Line</a>
+                                </div>
+                                <!-- Days -->
+                                <div class="h5 mb-0 font-weight-bold">Normal Service</div>
+                            </div>
+                            <div class="col-auto">
+                                <img src="img/caplets/TELCap.png" alt="TEL" width="55px">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- BPLRT -->
+            <div class="col-xl-4 col-md-6 wow fadeInUp" data-wow-delay="300ms">
+                <div class="card card-lrt border-lrt h-100 py-2">
+                    <div class="card-body card-body-lrt">
+                        <div class="row no-gutters align-items-center">
+                            <div class="col mr-2">
+                                <div class="line text-xs font-weight-bold text-lrt text-uppercase mb-1">
+                                    <a href="mrt-lines/bp.html">Bukit Panjang LRT</a>
+                                </div>
+                                <!-- Days -->
+                                <div class="h5 mb-0 font-weight-bold">Normal Service</div>
+                            </div>
+                            <div class="col-auto">
+                                <img src="img/caplets/BPCap.png" alt="BPLRT" width="55px">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <!-- SKPGLRT -->
+            <div class="col-xl-4 col-md-6 wow fadeInUp" data-wow-delay="300ms">
+                <div class="card card-lrt border-lrt h-100 py-2">
+                    <div class="card-body card-body-lrt">
+                        <div class="row no-gutters align-items-center">
+                            <div class="col mr-2">
+                                <div class="line text-xs font-weight-bold text-lrt text-uppercase mb-1">
+                                    <a href="mrt-lines/bp.html">Bukit Panjang LRT</a>
+                                </div>
+                                <!-- Days -->
+                                <div class="h5 mb-0 font-weight-bold">Normal Service</div>
+                            </div>
+                            <div class="col-auto">
+                                <img src="img/caplets/SKPGCap.png" alt="SKPGLRT" width="55px">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
     </section>
-
-
-
-
-
-
-
-
 
 
     <section id="lrd" class="d-flex flex-column justify-content-center">
