2025-06 Cumulative Update for Version 5.0 (5.0.3)

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
             <!-- CCL -->
             <div class="col-xl-4 col-md-6 wow fadeInUp" data-wow-delay="300ms">
-                <div class="card card-ccl border-nel h-100 py-2">
+                <div class="card card-ccl border-ccl h-100 py-2">
                     <div class="card-body card-body-ccl">
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
@@ -221,7 +221,7 @@
 
             <!-- BPLRT -->
             <div class="col-xl-4 col-md-6 wow fadeInUp" data-wow-delay="300ms">
-                <div class="card card-lrt border-lrt h-100 py-2">
+                <div class="card card-bplrt border-lrt h-100 py-2">
                     <div class="card-body card-body-lrt">
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
@@ -241,12 +241,12 @@
 
             <!-- SKPGLRT -->
             <div class="col-xl-4 col-md-6 wow fadeInUp" data-wow-delay="300ms">
-                <div class="card card-lrt border-lrt h-100 py-2">
+                <div class="card card-skpglrt border-lrt h-100 py-2">
                     <div class="card-body card-body-lrt">
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
                                 <div class="line text-xs font-weight-bold text-lrt text-uppercase mb-1">
-                                    <a href="mrt-lines/bp.html">Bukit Panjang LRT</a>
+                                    <a href="mrt-lines/sk.html">Sengkang</a>-<a href="mrt-lines/pg.html">Punggol LRT</a>
                                 </div>
                                 <!-- Days -->
                                 <div class="h5 mb-0 font-weight-bold">Normal Service</div>
@@ -432,8 +432,8 @@
 
             <!-- BPLRT -->
             <div class="col-xl-4 col-md-6 wow fadeInUp" data-wow-delay="300ms">
-                <div class="card card-lrt border-lrt h-100 py-2">
-                    <div class="card-body card-body-lrt">
+                <div class="card card-bplrt border-lrt h-100 py-2">
+                    <div class="card-body card-body-bplrt">
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
                                 <div class="line text-xs font-weight-bold text-lrt text-uppercase mb-1">
@@ -458,8 +458,8 @@
 
             <!-- SKPGLRT -->
             <div class="col-xl-4 col-md-6 wow fadeInUp" data-wow-delay="300ms">
-                <div class="card card-lrt border-lrt h-100 py-2">
-                    <div class="card-body card-body-lrt">
+                <div class="card card-skpglrt border-lrt h-100 py-2">
+                    <div class="card-body card-body-bplrt">
                         <div class="row no-gutters align-items-center">
                             <div class="col mr-2">
                                 <div class="line text-xs font-weight-bold text-lrt text-uppercase mb-1">
