2025-06 Cumulative Update for Version 5.0 (5.0.3)

--- a/index.html
+++ b/index.html
@@ -170,6 +170,12 @@
                                 </div>
                                 <!-- Days -->
                                 <div class="h5 mb-0 font-weight-bold">Normal Service</div>
+                                
+                                <!-- Advisory -->
+                                <div class="h5 advisory mb-0 font-weight-bold"> <i class="fa-solid fa-triangle-exclamation"></i>&nbsp; There is a change to Last Train Timings.
+                                    <a href="https://www.lta.gov.sg/content/ltagov/en/newsroom/2025/5/news-releases/service-adjustments-on-the-circle-line-in-preparation-for-circle.html">
+                                        View Details ></a>
+                                </div>
                             </div>
                             <div class="col-auto">
                                 <img src="img/caplets/CCLCap.png" alt="CCL" width="55px">
