--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <div class="row h-100 align-items-center">
                 <div class="col-12">
                     <div class="breadcrumb-content text-center">
-                        <h2 class="page-title wow fadeInUp" data-wow-delay="300ms">Lines Status (BETA)</h2>
+                        <h2 class="page-title wow fadeInUp" data-wow-delay="300ms">Lines Status</h2>
                     </div>
                 </div>
             </div>
