2025-07 Feature Update for Version Next (5.0.0)

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             <a href="#" class="nav-item active">Home</a>
             <a href="./about.html" class="nav-item">About</a>
             <a href="./works-by-nrfz.html" class="nav-item">OpenBVE</a>
-            <a href="eicw/eicw.html" class="nav-item">OMSI 2</a>
+            <a href="omsi-2.html" class="nav-item">OMSI 2</a>
             <a href="./blog.html" class="nav-item">Blog</a>
             <a href="#" class="nav-item">
                 <button class="wbnrfz_btn_theme" id="dark-mode-toggle" title="Toggle Dark/Light Mode!">
