--- a/omsi-2.html
+++ b/omsi-2.html
@@ -129,12 +129,14 @@
 
   <section class="about-me-summ clearfix">
 
+
+
     <div class="pw-portfolio-area clearfix" style="padding-top: 1em; padding-bottom: 2em;">
       <div class="container-fluid">
         <div class="row">
           <div class="col-12">
             <div class="section-heading text-center wow fadeInUp" data-wow-delay="100ms">
-              <h2 id="filter-title">All Projects</h2>
+              <h2 id="filter-title">All Releases</h2>
             </div>
           </div>
         </div>
