--- a/omsi-2.html
+++ b/omsi-2.html
@@ -145,9 +145,9 @@
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item ds mb-30 wow fadeInUp" data-wow-delay="100ms"
             data-year="2025">
             <div class="single-portfolio-content">
-              <img src="https://i.imgur.com/rBAx6Yy.png" alt>
+              <img src="img/releases-ss/ht.png" alt>
               <div class="hover-content-blog align-items-center">
-                <h4>EICW - Implementation Brainstorming</h4>
+                <h4>Hillgrove Town</h4>
                 <a class="info" href="worksbynrfz/improve-wf.html" class="portfolio-img"><i
                     class="fa-solid fa-arrow-right"></i></a>
               </div>
@@ -157,9 +157,9 @@
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item in mb-30 wow fadeInUp" data-wow-delay="100ms"
             data-year="2024">
             <div class="single-portfolio-content">
-              <img src="https://i.imgur.com/tKQajl6.png" alt="tdc-v3">
+              <img src="img/releases-ss/wt.png" alt="tdc-v3">
               <div class="hover-content-blog">
-                <h4>Train Delays Tracker</h4>
+                <h4>Woodlands Town</h4>
                 <a class="info" href="worksbynrfz/delays-checker.html" class="portfolio-img"><i
                     class="fa-solid fa-arrow-right"></i></a>
               </div>
