2025-07 Feature Update for Version Next (5.0.0)

--- a/omsi-2.html
+++ b/omsi-2.html
@@ -57,7 +57,7 @@
     </label>
 
     <nav class="navbar navbar-mobile">
-      <a href="#" class="nav-item">Home</a>
+      <a href="./index.html" class="nav-item">Home</a>
       <a href="./about.html" class="nav-item">About</a>
       <a href="./works-by-nrfz.html" class="nav-item">OpenBVE</a>
       <a href="eicw/eicw.html" class="nav-item active">OMSI 2</a>
@@ -71,7 +71,7 @@
   </header>
 
 
-  <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-about"
+  <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-omsi2"
     style="background-image: url(img/bg-img/hero-bg-omsi2.jpg); height: 100vh;">
     <div class="wbnrfz_details_blog">
       <div class="container">
@@ -401,7 +401,7 @@
     data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
     </script>
 
-  <script src="js/theme-subPages.js"></script>
+  <script src="js/theme-omsi2Page.js"></script>
 
   <script src="js/jquery.min.js"></script>
 
