--- a/about.html
+++ b/about.html
@@ -289,18 +289,14 @@
             <div class="footer-content d-flex flex-column align-items-center text-center">
                 <!-- Social Links -->
                 <div class="social-info">
-                    <a href="https://github.com/nurafianZulkifli"><i class="fa-brands fa-github"
-                            aria-hidden="true"></i></a>
-                    <a href="https://twitter.com/nrfzlkf_"><i class="fa-brands fa-x-twitter" aria-hidden="true"></i></a>
+                    <a href="https://twitter.com/nrfzlkf_"><i class="fa-brands fa-youtube" aria-hidden="true"></i></a>
                     <a href="https://www.facebook.com/Nrfnzlkf/"><i class="fa-brands fa-facebook"
-                            aria-hidden="true"></i></a>
-                    <a href="https://www.instagram.com/nrfzlkf/"><i class="fa-brands fa-instagram"
                             aria-hidden="true"></i></a>
                 </div>
                 <!-- Copywrite Text -->
                 <div class="copywrite-text">
                     <p>&copy;
-                        <script>document.write(new Date().getFullYear());</script> Nurafian Zulkifli
+                        <script>document.write(new Date().getFullYear());</script> Illustrations belong to SMRT Corp Ltd
                     </p>
                 </div>
             </div>
@@ -312,7 +308,7 @@
         data-message="This website uses cookies to provide necessary site functionality and to improve your experience. By using this website, you agree to our use of cookies.">
         </script>
 
-            <!-- Page level plugins -->
+    <!-- Page level plugins -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.6/dist/chart.umd.min.js"></script>
 
     <!-- Page level custom scripts -->
