2025-08 Feature Update for Version Next (5.0.0)

--- a/about.html
+++ b/about.html
@@ -56,7 +56,7 @@
         <nav class="navbar navbar-mobile">
             <a href="./index.html" class="nav-item">Home</a>
             <a href="./about.html" class="nav-item active">About</a>
-            <a href="./works-by-nrfz.html" class="nav-item">OpenBVE</a>
+            <a href="./openbve.html" class="nav-item">OpenBVE</a>
             <a href="./omsi-2.html" class="nav-item">OMSI 2</a>
             <a href="./blog.html" class="nav-item">Blog</a>
             <a href="#" class="nav-item">
@@ -67,8 +67,8 @@
         </nav>
     </header>
 
-    <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-about"
-        style="background-image: url(img/bg-img/hero-bg.png); height: 100vh;">
+    <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img" id="cv-about"
+        style="background-image: url(img/bg-img/hero-about.png); height: 100vh;">
         <div class="wbnrfz_details_blog">
             <div class="container">
                 <div class="portfolio-controls d-flex justify-content-between align-items-center">
