--- a/omsi-2.html
+++ b/omsi-2.html
@@ -59,8 +59,8 @@
     <nav class="navbar navbar-mobile">
       <a href="./index.html" class="nav-item">Home</a>
       <a href="./about.html" class="nav-item">About</a>
-      <a href="./works-by-nrfz.html" class="nav-item">OpenBVE</a>
-      <a href="eicw/eicw.html" class="nav-item active">OMSI 2</a>
+      <a href="./openbve.html" class="nav-item">OpenBVE</a>
+      <a href="./omsi-2.html" class="nav-item active">OMSI 2</a>
       <a href="./blog.html" class="nav-item">Blog</a>
       <a href="#" class="nav-item">
         <button class="wbnrfz_btn_theme" id="dark-mode-toggle" title="Toggle Dark/Light Mode!">
@@ -145,7 +145,7 @@
             <h2 class="accordion-header" id="headingGetStarted">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#collapseGetStarted" aria-expanded="false" aria-controls="collapseGetStarted">
-                <i class="fa-solid fa-download"></i>&nbsp; Get Started
+                <i class="fa-solid fa-download"></i>&nbsp;&nbsp;<h2 class="accordion-header">Get Started</h2>
               </button>
             </h2>
             <div id="collapseGetStarted" class="accordion-collapse collapse" aria-labelledby="headingGetStarted"
@@ -195,7 +195,7 @@
             <h2 class="accordion-header" id="headingIGT">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
                 data-bs-target="#collapseIGT" aria-expanded="false" aria-controls="collapseIGT">
-                <i class="fa-solid fa-train-subway"></i>&nbsp; Install Guide - Modified Buses/Maps
+                <i class="fa-solid fa-train-subway"></i>&nbsp;&nbsp;<h2 class="accordion-header">Install Guide - Modified Buses/Maps</h2>
               </button>
             </h2>
 
