2025-08 Feature Update for Version Next (5.0.0)

--- a/omsi-2.html
+++ b/omsi-2.html
@@ -314,7 +314,7 @@
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item df mb-30 wow fadeInUp" data-wow-delay="300ms"
             data-year="2024">
             <div class="single-portfolio-content">
-              <img src="img/releases-ss/dfA.png" alt="df">
+              <img src="img/releases-ss/dfA.png" alt="dfom">
               <div class="hover-content-blog">
                 <h4>OMSI 2 Developer Files</h4>
                 <a class="info" href="worksbynrfz/lta-pids.html" class="portfolio-img"><i
