--- a/openbve.html
+++ b/openbve.html
@@ -131,13 +131,6 @@
     <div class="pw-portfolio-area clearfix" style="padding-top: 1em; padding-bottom: 2em;">
       <div class="container-fluid">
 
-        <div class="alert alert-danger alert-dismissible" role="alert"
-          style="margin-top: 1em; cursor: default; font-size: 14px;">
-          Only attempt the following if you are familiar with Modifying OMSI contents, and have backed up your
-          item. We will not assume responsiblity should things go wrong.
-          <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-        </div>
-
         <!-- Accordion -->
             <div class="accordion" id="accordGuide">
 
@@ -335,9 +328,9 @@
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item rt mb-30 wow fadeInUp" data-wow-delay="100ms"
             data-year="2025">
             <div class="single-portfolio-content">
-              <img src="img/releases-ss/ht.png" alt="ht">
+              <img src="img/releases-ss/devfile-op.png" alt="dfop">
               <div class="hover-content-blog align-items-center">
-                <h4>Hillgrove Town</h4>
+                <h4>Dev Files (STARiS/CDD-CLD/VFD)</h4>
                 <a class="info" href="worksbynrfz/improve-wf.html" class="portfolio-img"><i
                     class="fa-solid fa-arrow-right"></i></a>
               </div>
@@ -347,57 +340,57 @@
           <div class="col-12 col-sm-6 col-lg-3 single_gallery_item rt mb-30 wow fadeInUp" data-wow-delay="100ms"
             data-year="2024">
             <div class="single-portfolio-content">
-              <img src="img/releases-ss/wt.png" alt="wt">
+              <img src="img/releases-ss/nwl2.0.png" alt="nwl2.0">
               <div class="hover-content-blog">
-                <h4>Woodlands Town</h4>
+                <h4>North West Line</h4>
                 <a class="info" href="worksbynrfz/delays-checker.html" class="portfolio-img"><i
                     class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item bs mb-30 wow fadeInUp" data-wow-delay="100ms"
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item rt mb-30 wow fadeInUp" data-wow-delay="100ms"
             data-year="2024">
             <div class="single-portfolio-content">
-              <img src="img/releases-ss/su18.png" alt="su18">
+              <img src="img/releases-ss/ael2.0.png" alt="ael2.0">
               <div class="hover-content-blog">
-                <h4>Solaris Urbino 18</h4>
+                <h4>Airport Express Line</h4>
                 <a class="info" href="worksbynrfz/sit.html" class="portfolio-img"><i
                     class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item bs mb-30 wow fadeInUp" data-wow-delay="100ms"
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item tr mb-30 wow fadeInUp" data-wow-delay="100ms"
             data-year="2024">
             <div class="single-portfolio-content">
-              <img src="img/releases-ss/vdl.png" alt="vdl">
+              <img src="img/releases-ss/ryl150.png" alt="ryl150">
               <div class="hover-content-blog">
-                <h4>VDL Citea LLE</h4>
+                <h4>Alstom Movia RYL150</h4>
                 <a class="info" href="worksbynrfz/bp12.html" class="portfolio-img"><i
                     class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item df mb-30 wow fadeInUp" data-wow-delay="300ms"
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item rt mb-30 wow fadeInUp" data-wow-delay="300ms"
             data-year="2024">
             <div class="single-portfolio-content">
-              <img src="img/releases-ss/dfA.png" alt="df">
+              <img src="img/releases-ss/ys2.0.png" alt="ys2.0">
               <div class="hover-content-blog">
-                <h4>OMSI 2 Developer Files</h4>
+                <h4>Yishun LRT</h4>
                 <a class="info" href="worksbynrfz/lta-pids.html" class="portfolio-img"><i
                     class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item bs rp mb-30 wow fadeInUp" data-wow-delay="300ms"
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item rt mb-30 wow fadeInUp" data-wow-delay="300ms"
             data-year="2024">
             <div class="single-portfolio-content">
-              <img src="img/releases-ss/jw.png" alt="jw">
+              <img src="img/releases-ss/hbl.png" alt="hbl">
               <div class="hover-content-blog">
-                <h4>SMRT JW B9TL Ad</h4>
+                <h4>Harbourvale Line</h4>
                 <a class="info" href="worksbynrfz/lta-bp.html" class="portfolio-img"><i
                     class="fa-solid fa-arrow-right"></i></a>
               </div>
