--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
                 <div class="col-md-6 col-lg-3"><a href="releases/hillgrove-town.html">
                         <div class="about-me-content text-center  wow fadeInUp" data-wow-delay="300ms"
-                            style="padding-bottom: 1.05em; padding-top: 3.5em;">
+                            style="padding-bottom: 1.05em; padding-top: 3.5em; margin-top: 80px;">
                             <div class="wsd-icon">
                                 <i class="fa-solid fa-bus"></i>
                             </div>
@@ -116,7 +116,7 @@
 
                 <div class="col-md-6 col-lg-3"><a href="releases/woodlands-town.html">
                         <div class="about-me-content text-center  wow fadeInUp" data-wow-delay="500ms"
-                            style="padding-bottom: 1.05em; padding-top: 3.5em;">
+                            style="padding-bottom: 1.05em; padding-top: 3.5em; margin-top: 80px;">
                             <div class="wsd-icon">
                                 <i class="fa-solid fa-bus"></i>
                             </div>
@@ -127,7 +127,7 @@
 
                 <div class="col-md-6 col-lg-3"><a href="info/berlin-brt.html">
                         <div class="about-me-content text-center  wow fadeInUp" data-wow-delay="700ms"
-                            style="padding-bottom: 1.05em; padding-top: 3.5em;">
+                            style="padding-bottom: 1.05em; padding-top: 3.5em; margin-top: 80px;">
                             <div class="wsd-icon">
                                 <i class="fa-solid fa-bus"></i>
                             </div>
@@ -138,7 +138,7 @@
 
                 <div class="col-md-6 col-lg-3"><a href="info/lemmental.html">
                         <div class="about-me-content text-center  wow fadeInUp" data-wow-delay="900ms"
-                            style="padding-bottom: 1.05em; padding-top: 3.5em;">
+                            style="padding-bottom: 1.05em; padding-top: 3.5em; margin-top: 80px;">
                             <div class="wsd-icon">
                                 <i class="fa-solid fa-bus"></i>
                             </div>
