2025-08 Feature Update for Version Next (5.0.0)

--- a/omsi-2.html
+++ b/omsi-2.html
@@ -112,14 +112,14 @@
             </div>
 
             <!-- Sort Dropdown -->
-            <div class="portfolio-sort">
+            <!-- <div class="portfolio-sort">
               <label for="sort-options">Sort By:</label>
               <select id="sort-options">
                 <option value="newest">Newest</option>
                 <option value="oldest">Oldest</option>
                 <option value="alphabetical">Alphabetical</option>
               </select>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
