--- a/openbve.html
+++ b/openbve.html
@@ -113,14 +113,14 @@
             </div>
 
             <!-- Sort Dropdown -->
-            <div class="portfolio-sort">
+            <!-- <div class="portfolio-sort">
               <label for="sort-options">Sort By:</label>
               <select id="sort-options">
                 <option value="newest">Newest</option>
                 <option value="oldest">Oldest</option>
                 <option value="alphabetical">Alphabetical</option>
               </select>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -405,6 +405,79 @@
               </div>
             </div>
           </div>
+
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item tr mb-30 wow fadeInUp" data-wow-delay="300ms"
+            data-year="2024">
+            <div class="single-portfolio-content">
+              <img src="img/releases-ss/r151.png" alt="r151">
+              <div class="hover-content-blog">
+                <h4>Alstom Movia R151</h4>
+                <a class="info" href="worksbynrfz/lta-bp.html" class="portfolio-img"><i
+                    class="fa-solid fa-arrow-right"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item tr mb-30 wow fadeInUp" data-wow-delay="300ms"
+            data-year="2024">
+            <div class="single-portfolio-content">
+              <img src="img/releases-ss/c151c.png" alt="c151c">
+              <div class="hover-content-blog">
+                <h4>Kawasaki-CRRC Qingdao Sifang C151C</h4>
+                <a class="info" href="worksbynrfz/lta-bp.html" class="portfolio-img"><i
+                    class="fa-solid fa-arrow-right"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item tr mb-30 wow fadeInUp" data-wow-delay="300ms"
+            data-year="2024">
+            <div class="single-portfolio-content">
+              <img src="img/releases-ss/c151b.png" alt="c151b">
+              <div class="hover-content-blog">
+                <h4>Kawasaki-CRRC Qingdao Sifang C151B</h4>
+                <a class="info" href="worksbynrfz/lta-bp.html" class="portfolio-img"><i
+                    class="fa-solid fa-arrow-right"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item tr mb-30 wow fadeInUp" data-wow-delay="300ms"
+            data-year="2024">
+            <div class="single-portfolio-content">
+              <img src="img/releases-ss/c151a.png" alt="c151a">
+              <div class="hover-content-blog">
+                <h4>Kawasaki-CRRC Qingdao Sifang C151A</h4>
+                <a class="info" href="worksbynrfz/lta-bp.html" class="portfolio-img"><i
+                    class="fa-solid fa-arrow-right"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item tr mb-30 wow fadeInUp" data-wow-delay="300ms"
+            data-year="2024">
+            <div class="single-portfolio-content">
+              <img src="img/releases-ss/yl150.png" alt="yl150">
+              <div class="hover-content-blog">
+                <h4>Alstom (Bombardier) Movia YL150/A/B (Legacy)</h4>
+                <a class="info" href="worksbynrfz/lta-bp.html" class="portfolio-img"><i
+                    class="fa-solid fa-arrow-right"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item tr mb-30 wow fadeInUp" data-wow-delay="300ms"
+            data-year="2024">
+            <div class="single-portfolio-content">
+              <img src="img/releases-ss/hbll.png" alt="yl150">
+              <div class="hover-content-blog">
+                <h4>C651/A/B/C/D (Legacy)</h4>
+                <a class="info" href="worksbynrfz/lta-bp.html" class="portfolio-img"><i
+                    class="fa-solid fa-arrow-right"></i></a>
+              </div>
+            </div>
+          </div>
+
         </div>
       </div>
     </div>
