--- a/openbve.html
+++ b/openbve.html
@@ -340,7 +340,7 @@
               <img src="img/releases-ss/nwl2.0.png" alt="nwl2.0">
               <div class="hover-content-blog">
                 <h4>North West Line</h4>
-                <a class="info" href="worksbynrfz/delays-checker.html" class="portfolio-img"><i
+                <a class="info" href="releases/north-west-line.html" class="portfolio-img"><i
                     class="fa-solid fa-arrow-right"></i></a>
               </div>
             </div>
@@ -454,7 +454,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item tr mb-30 wow fadeInUp" data-wow-delay="300ms"
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item tr leg mb-30 wow fadeInUp" data-wow-delay="300ms"
             data-year="2024">
             <div class="single-portfolio-content">
               <img src="img/releases-ss/yl150.png" alt="yl150">
@@ -466,7 +466,7 @@
             </div>
           </div>
 
-          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item tr mb-30 wow fadeInUp" data-wow-delay="300ms"
+          <div class="col-12 col-sm-6 col-lg-3 single_gallery_item tr leg mb-30 wow fadeInUp" data-wow-delay="300ms"
             data-year="2024">
             <div class="single-portfolio-content">
               <img src="img/releases-ss/hbll.png" alt="yl150">
