2025-08 Feature Update for Version Next (5.0.0)

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                         <img src="img/core-img/openbvedl.png" alt>
                         <div class="hover-content-blog">
                             <h4>OpenBVE</h4>
-                            <a class="info" href="worksbynrfz/improve-wf.html" class="portfolio-img"><i
+                            <a class="info" href="openbve.html" class="portfolio-img"><i
                                     class="fa-solid fa-arrow-right"></i></a>
                         </div>
                     </div>
